<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	tools:context=".MainActivity">

	<EditText
		android:id="@+id/signup_firstName"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginTop="24dp"
		android:layout_marginEnd="24dp"

		android:hint="@string/first_name"
		android:importantForAutofill="no"
		android:inputType="text"
		android:selectAllOnFocus="true"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<EditText
		android:id="@+id/signup_lastName"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginTop="10dp"
		android:layout_marginEnd="24dp"

		android:hint="@string/last_name"
		android:importantForAutofill="no"
		android:inputType="text"
		android:selectAllOnFocus="true"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/signup_firstName" />

	<EditText
		android:id="@+id/signup_email"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginTop="112dp"
		android:layout_marginEnd="24dp"

		android:hint="@string/prompt_email"
		android:importantForAutofill="no"
		android:inputType="textEmailAddress"
		android:selectAllOnFocus="true"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@id/signup_firstName" />

	<EditText
		android:id="@+id/signup_userName"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginTop="120dp"
		android:layout_marginEnd="24dp"

		android:hint="@string/user_name"
		android:importantForAutofill="no"
		android:inputType="text"
		android:selectAllOnFocus="true"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/signup_firstName" />

	<EditText
		android:id="@+id/signup_phone"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginTop="176dp"

		android:layout_marginEnd="24dp"
		android:hint="@string/phone_number"
		android:imeActionLabel="@string/action_sign_in_short"
		android:imeOptions="actionDone"
		android:importantForAutofill="no"
		android:inputType="phone"
		android:selectAllOnFocus="true"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/signup_firstName" />

	<EditText
		android:id="@+id/signup_password"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginTop="236dp"
		android:layout_marginEnd="24dp"

		android:hint="@string/prompt_password"
		android:imeActionLabel="@string/action_sign_in_short"
		android:imeOptions="actionDone"
		android:importantForAutofill="no"
		android:inputType="textPassword"
		android:selectAllOnFocus="true"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/signup_firstName" />

	<EditText
		android:id="@+id/retype_password"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginTop="292dp"
		android:layout_marginEnd="24dp"

		android:hint="@string/retype_password"
		android:imeActionLabel="@string/action_sign_in_short"
		android:imeOptions="actionDone"
		android:importantForAutofill="no"
		android:inputType="textPassword"
		android:selectAllOnFocus="true"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/signup_firstName" />

	<Button
		android:id="@+id/signup"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="start"
		android:layout_marginStart="48dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="48dp"
		android:layout_marginBottom="64dp"
		android:enabled="true"
		android:text="Sign Up as Rider"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.497"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/retype_password"
		app:layout_constraintVertical_bias="0.43" />

	<Button
		android:id="@+id/signup_driver"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="start"
		android:layout_marginStart="48dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="48dp"
		android:layout_marginBottom="64dp"
		android:enabled="true"
		android:text="Sign Up as Driver"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.497"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/signup"
		app:layout_constraintVertical_bias="0.43" />

	<ProgressBar
		android:id="@+id/loading"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginStart="32dp"
		android:layout_marginTop="64dp"
		android:layout_marginEnd="32dp"
		android:visibility="gone"
		app:layout_constraintBottom_toTopOf="@+id/retype_password"
		app:layout_constraintEnd_toEndOf="@+id/retype_password"
		app:layout_constraintStart_toStartOf="@+id/retype_password"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>
